--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,18 @@
-$bg-color: #cccccc;
-$bg-color-block: yellow;
-$big-text: 30px;
-$small-text: 20px;
-$paragraph-size: 30px;
+$text-color: #413d4b;
+$text-font: 'Roboto', sans-serif;
+$text-light: 300;
+$text-medium: 500;
+$text-bold: 700;
+$white-text-color: #fff;
+$cyan-text-color: #00e0d0;
+$form-border-color: #e5e5e5;
+$text-size: 14px;
+
+
+
+
+// $bg-color: #cccccc;
+// $bg-color-block: yellow;
+// $big-text: 30px;
+// $small-text: 20px;
+// $paragraph-size: 30px;
