--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,27 +1,51 @@
-@mixin paragraphs {
-    p {
-        font-size: $paragraph-size;
-        line-height: 20px;
-        color: #000; 
-        font-style: italic;
-
-        @include link-style;
-
-        span {
-            font-weight: bold;
-        }
-    }   
-}
-
-@mixin link-style {
-    a {
+@mixin button {
+    .link-button{
+        font-weight: $text-medium;
+        font-size: 16px;
+        border: 1px solid $cyan-text-color;
+        border-radius: 2px;
+        color: $cyan-text-color;
         text-decoration: none;
-        display: inline-block;
-        color: darkblue;
-        border-bottom: 1px solid red;
+        line-height: 40px;
+        padding: 0 20px;
+        
 
         &:hover {
-            border-color: transparent;
+            background-color: $cyan-text-color;
+            color: $white-text-color;
+            transition: all .2s ease;
         }
     }
+   
 }
+
+
+
+
+// @mixin paragraphs {
+//     p {
+//         font-size: $paragraph-size;
+//         line-height: 20px;
+//         color: #000; 
+//         font-style: italic;
+
+//         @include link-style;
+
+//         span {
+//             font-weight: bold;
+//         }
+//     }   
+// }
+
+// @mixin link-style {
+//     a {
+//         text-decoration: none;
+//         display: inline-block;
+//         color: darkblue;
+//         border-bottom: 1px solid red;
+
+//         &:hover {
+//             border-color: transparent;
+//         }
+//     }
+// }
