--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,6 +5,7 @@ $text-medium: 500;
 $text-bold: 700;
 $white-text-color: #fff;
 $cyan-text-color: #00e0d0;
+$dark-cyan-text-color: #00c5b7;
 $form-border-color: #e5e5e5;
 $text-size: 14px;
 
